--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.12MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇯🇵 日本-576.7KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-590.8KB/s(Youtube:不良林), server: 5.183.176.92, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: 36.139.154.17, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 438eb205-b45d-48bf-aec1-c1587b581ea0}
-  - {name: 🇯🇵 日本-1.38MB/s(Youtube:不良林), server: 5.183.176.92, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.74MB/s(Youtube:不良林), server: 5.183.176.92, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-1.66MB/s(Youtube:不良林), server: 5.183.176.92, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-5.66MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-574.3KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇯🇵 日本-400.7KB/s(Youtube:不良林), server: 185.172.113.108, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-365.1KB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-354.4KB/s(Youtube:不良林), server: 185.172.113.243, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-403.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.04MB/s(Youtube:不良林), server: 185.172.113.108, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.12MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-576.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-590.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.38MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.74MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇺🇸 美国-574.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-400.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇯🇵 日本-354.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-403.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
