--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.50MB/s(Youtube:不良林), server: 185.172.113.226, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: hlu.bgp2.liuliangzhuanfa.xyz, port: 45379, type: trojan, password: d73e7fe4-88d2-4d9a-81c8-c9a97bbc1b84, sni: hlu.bgp2.liuliangzhuanfa.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-365.1KB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-810.9KB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-1.25MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.43MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.10MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.26MB/s(Youtube:不良林), server: 5.183.176.92, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-449.3KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 185.172.113.108, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇨🇦 加拿大-529.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-607.8KB/s(Youtube:不良林), server: 72.140.224.197, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 185.172.113.243, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 台湾-2.88MB/s(Youtube:不良林), server: ntw01.vsvideo.live, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: ntw01.vsvideo.live, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-810.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-449.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-810.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-449.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-810.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-449.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-810.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-449.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-810.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-449.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-810.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-449.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
-      - 🇯🇵 日本-365.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-810.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.10MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇮🇳 印度-449.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-578.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-529.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-607.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
