--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-621.5KB/s(Youtube:不良林), server: 185.172.113.108, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-798.4KB/s(Youtube:不良林), server: 185.172.113.226, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 台湾-8.72MB/s(Youtube:不良林), server: ntw02.vsvideo.live, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: ntw02.vsvideo.live, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-799.2KB/s(Youtube:不良林), server: 185.172.113.243, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-939.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.06MB/s(Youtube:不良林), server: 185.172.113.243, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-706.0KB/s(Youtube:不良林), server: 185.172.113.243, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-232.8KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 185.172.113.108, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-2.72MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.65MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.37MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 2aef06f4-6fa1-3fe4-9c08-8bdbd2cefe4e, sni: sg1.jjzgy.live, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-678.6KB/s(Youtube:不良林), server: 5.183.176.92, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-332.2KB/s(Youtube:不良林), server: 5.183.176.92, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-621.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-798.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-706.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-678.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-621.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-798.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-706.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-678.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-621.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-798.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-706.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-678.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-621.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-798.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-706.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-678.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-621.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-798.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-706.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-678.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-621.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-798.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-706.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-678.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-621.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-798.4KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-8.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-939.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.06MB/s(Youtube:不良林)
+      - 🇯🇵 日本-706.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-232.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.65MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.37MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.62MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
       - 🇯🇵 日本-678.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-332.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
